force-app/main/default/objects/Projetly_Config__mdt/Projetly_Config__mdt.object-meta.xml
<CustomObject>
    <label>Projetly Config</label>
    <pluralLabel>Projetly Configs</pluralLabel>
</CustomObject>