force-app/main/default/objects/Projetly_Config__mdt/fields/Function_Key__c.field-meta.xml
<CustomField>
    <fullName>Function_Key__c</fullName>
    <description>API key sent as the x-functions-key header on outbound webhook requests. Protected so subscriber orgs cannot read the value.</description>
    <label>Function Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>