force-app/main/default/objects/Projetly_Config__mdt/fields/Projetly_Key__c.field-meta.xml
<CustomField>
    <fullName>Projetly_Key__c</fullName>
    <description>API key sent as the projetly-key header on outbound webhook requests. Protected so subscriber orgs cannot read the value.</description>
    <label>Projetly Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>