force-app/main/default/objects/Projetly_Config__mdt/fields/Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret__c</fullName>
    <description>HMAC-SHA256 key used to sign outbound webhook payloads. Protected so subscriber orgs cannot read the value.</description>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>